# micro_nn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_ubuntu_gcc_13.yml  cmake-single-platform.yml
src/: CMakeLists.txt  config.h  dataloader.h  init.h  layers.h  linalg.h  loss.h  lr_scheduler.h  main.cpp  meta.h  model.h  optimizer.h  rand.h  sequential_model.h  solver.h  unique_id.cpp  unique_id.h  utils.h
src/data_structures/: hash_map.h
src/linalg/: lu_decomp.h  matrix.h
test/: CMakeLists.txt  constexpr_solver_test.cpp  dataloader_test.cpp  hash_map_test.cpp  init_test.cpp  layers_test.cpp  linalg_test.cpp  loss_test.cpp  lr_scheduler_test.cpp  lu_decomp_test.cpp  matrix_test.cpp  optimizer_test.cpp  rand_test.cpp  sequential_model_test.cpp  solver_test.cpp  test.cpp  unique_id_test.cpp  utils_test.cpp
test/utils/: custom_assert.h
